<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory app:title="@string/settings_payment_title">
        <androidx.preference.ListPreference
            app:key="pay_period"
            app:title="@string/set_pay_period_button"
            app:summary="%s"
            app:entries="@array/pay_periods"
            app:entryValues="@array/pay_period_values"
            app:defaultValue="MONTHLY"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.Preference
            app:key="payday"
            app:title="@string/set_payday_button"
            app:summary="@string/payday_not_set"/>
        <androidx.preference.EditTextPreference
            app:key="salary"
            app:title="@string/set_salary_button_text"
            app:dialogTitle="@string/dialog_set_salary_title"
            android:inputType="number" />
        <androidx.preference.EditTextPreference
            app:key="monthly_savings"
            app:title="@string/set_monthly_savings_button"
            app:dialogTitle="@string/dialog_set_monthly_savings_title"
            android:inputType="number" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory app:title="@string/settings_general_title">
        <androidx.preference.SwitchPreferenceCompat
            app:key="weekend_adjustment"
            app:title="@string/weekend_adjustment_label"
            app:summary="@string/weekend_adjustment_summary"/>

        <!-- YENİ: Otomatik Hedef Birikimi Ayarı -->
        <androidx.preference.SwitchPreferenceCompat
            app:key="auto_saving_enabled"
            app:title="@string/auto_saving_title"
            app:summary="@string/auto_saving_summary"
            app:defaultValue="false" />

        <ListPreference
            app:key="theme"
            app:title="@string/theme_title"
            app:summary="%s"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="System" />

        <androidx.preference.SwitchPreferenceCompat
            app:key="auto_backup_enabled"
            app:title="Otomatik Yedekleme"
            app:summary="Verileri her maaş döngüsünde otomatik olarak Google Drive'a yedekle."
            app:defaultValue="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="account_category"
        app:title="@string/account_category_title">
        <Preference
            app:key="google_account"
            app:title="@string/google_sign_in_title"
            app:summary="@string/google_sign_in_summary"
            app:icon="@drawable/ic_google_logo"/>
        <Preference
            app:key="delete_account"
            app:title="@string/delete_account_title"
            app:summary="@string/delete_account_summary"
            app:icon="@drawable/ic_delete_forever"
            android:visible="false" />
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
